bubba-frontend (2.1.21) vincent hugo; urgency=low

  * Adding bubba-kernel to the list of installed packages (Closes: 1616) 
  * Adding bubba package to list of installed packages, chaning session
    userdata to use that version isntead of bubba-frontend version.

 -- Carl Fürstenberg <carl@excito.com>  Wed, 23 Mar 2011 12:23:23 +0100

bubba-frontend (2.1.20) vincent hugo; urgency=low

  * Handle errors if device doesn't contain partition information, i.e when
    device is /dev/sdb and not /dev/sdb1 etc.. (Closes: 1615)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 22 Mar 2011 15:27:56 +0100

bubba-frontend (2.1.19) vincent hugo; urgency=low

  * Fixed typo in filemanager tooltips. RT# 3558 

 -- Tor Krill <tor@excito.com>  Fri, 26 Nov 2010 10:51:02 +0100

bubba-frontend (2.1.18) vincent hugo; urgency=low

  * Try removing failed and detached raid disks when pressing remove
    in UI. 

 -- Tor Krill <tor@excito.com>  Wed, 03 Nov 2010 14:21:55 +0100

bubba-frontend (2.1.17) vincent hugo; urgency=low

  * Fixed formatting of update notifications.

 -- PA Nilsson <pa@excito.com>  Tue, 02 Nov 2010 11:41:16 +0100

bubba-frontend (2.1.16) vincent hugo; urgency=low

  * Modified help texts. 

 -- PA Nilsson <pa@excito.com>  Tue, 02 Nov 2010 09:43:14 +0100

bubba-frontend (2.1.15) vincent hugo; urgency=low

  * Add json return value for lan settings 
  * Fix help texts 

 -- Tor Krill <tor@excito.com>  Thu, 28 Oct 2010 15:01:32 +0200

bubba-frontend (2.1.14) lucid; urgency=low

  * Fixed default language to show correct lang when no default is set. (Closes: #1596) 

 -- PA Nilsson <pa@excito.com>  Tue, 26 Oct 2010 14:28:09 +0200

bubba-frontend (2.1.13) vincent hugo; urgency=low

  * Use utf8 charset by default on ntfs and vfat mounts 

 -- Tor Krill <tor@excito.com>  Mon, 25 Oct 2010 16:05:00 +0200

bubba-frontend (2.1.12) lucid; urgency=low

  * Extended php timeout to 5min for backup/restore settings. (Closes: #1597) 