@@ -1,3 +1,9 @@
+bubba-frontend (2.1.22) vincent hugo; urgency=low
+
+  * Switching mediatomb to minidlna (Closes: 1638)
+
+ -- Carl Fürstenberg <carl@excito.com>  Wed, 30 Mar 2011 12:46:51 +0200
+
 bubba-frontend (2.1.21) vincent hugo; urgency=low
 
   * Adding bubba-kernel to the list of installed packages (Closes: 1616) 
